중간점검으로 올림